--- a/css/styles.css
+++ b/css/styles.css
@@ -53,3 +53,45 @@ a, a:hover {
     margin-right: 10px;
     
 }
+
+.dsmovie-card {
+    width: 360px;
+
+}
+
+#dsmovie-cardlist {
+    padding: 40px 0px;
+}
+
+.dsmovie-card img {
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+}
+
+.dsmovie-card-description {
+    padding: 10px 0 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 0 0 8px 8px;
+}
+
+.dsmovie-card-description h3 {
+    font-weight: 700;
+    font-size: 14px;
+    margin-bottom: 25px;
+}
+
+.dsmovie-btn, .dsmovie-btn:hover {
+    font-weight: 700;
+    font-size: 14px;
+    color: #fff;
+    background-color: #4D41C0;
+    height: 40px;
+    width: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+}
