--- a/css/styles.css
+++ b/css/styles.css
@@ -93,9 +93,46 @@ a, a:hover {
     align-items: center;
     justify-content: center;
     border-radius: 4px;
+    border: 0;
 }
 
+.dsmovie-form-description {
+    background-color: #fff;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 0 0 8px 8px;
+}
 .dsmovie-form-container {
     padding: 40px 0;
     max-width: 480px;
+}
+
+.dsmovie-form {
+    width: 100%;
+}
+
+.dsmovie-form-group {
+    margin-bottom: 20px;
+}
+
+.dsmovie-form label {
+    font-size: 12px;
+    color: #aaa;
+}
+
+.dsmovie-form-btn-container {
+    justify-content: space-between;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-form-description h3 {
+    font-size: 13px;
+    font-weight: 700;
+    margin-bottom: 20px;
+
 }
