--- a/css/styles.css
+++ b/css/styles.css
@@ -74,12 +74,37 @@ a, a:hover {
     align-items: center;
     background-color: #fff;
     border-radius: 0 0 8px 8px;
+    height: 200px;
 }
 
 .dsmovie-card-description h3 {
     font-weight: 700;
     font-size: 14px;
     margin-bottom: 25px;
+}
+
+.dsmovie-card-description-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-card-description-bottom h4 {
+    font-size: 16px;
+    font-weight: 700;
+    color: #FFBB3A;
+    ;
+}
+
+.dsmovie-card-description-bottom p {
+    font-size: 12px;
+    font-weight: 400;
+    color: #aaa;
+    margin-bottom: 10px;
+}
+
+.dsmovie-card-description-bottom img {
+    width: 22px;
 }
 
 .dsmovie-btn, .dsmovie-btn:hover {
