--- a/css/styles.css
+++ b/css/styles.css
@@ -54,12 +54,12 @@ a, a:hover {
 }
 
 .dsmovie-card {
-    width: 360px;
+    width: 260px;
 
 }
 
 #dsmovie-cardlist {
-    padding: 0px 0px;
+    padding: 0px 10px;
 }
 
 .dsmovie-card img {
@@ -68,13 +68,14 @@ a, a:hover {
 }
 
 .dsmovie-card-description {
-    padding: 10px 0 20px 0;
+    padding: 10px 20px 20px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     background-color: #fff;
     border-radius: 0 0 8px 8px;
-    height: 195px;
+    height: 190px;
 }
 
 .dsmovie-card-description h3 {
@@ -132,7 +133,10 @@ a, a:hover {
 .dsmovie-form-container {
     padding: 40px 0;
     max-width: 480px;
-}
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+}   
 
 .dsmovie-form {
     width: 100%;
